<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:padding="15dp"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="121dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        android:src="@drawable/login" />


    <TextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="26dp"
        android:text="@string/welcome_back_to_onleine_medical_store" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="ContactNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/siginContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/siginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/btn"
        android:layout_marginTop="26dp"
        android:layout_gravity="center"
        />


    <TextView
        android:id="@+id/signupClick"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="@color/Ptext"
        android:layout_height="wrap_content"
        android:text="@string/dont" />


</LinearLayout>